<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kimathi_polls.activities.LoginActivity">



    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="34sp" />


            <TextView
                android:id="@+id/loginEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/email_required"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/loginEmailOrRegNoEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_template"
                android:ems="10"
                android:hint="@string/user_email_com"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/material_grey_dark"
                android:textSize="14sp"
                android:typeface="normal"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/loginPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/password_required"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_template"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/material_grey_dark"
                android:textSize="20sp"
                android:typeface="normal"
                tools:ignore="SpeakableTextPresentCheck" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:lineSpacingExtra="12sp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/material_blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submitLoginButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/button_template"
                android:backgroundTint="@color/material_green_dark"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>